# Theater-Maschine_Platform

./: .gitignore  AGENTS.md  KI Premium.py  LICENSE  Makefile  PLAN.md  README.md  Test - Delete me.py  docker-compose.native.yml  docker-compose.yml  script.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  run-native.sh
backend/aidebatte_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: export_qlab_light_cue_list.py  import_avatar_textzuordnung.py  import_burgtheater.py
backend/tests/: conftest.py  conftest_production.py  repo_paths.py  test_asset_api.py  test_asset_model.py  test_asset_service.py  test_asset_upload.py  test_avatar_done_gate.py  test_avatar_speech_catalog.py  test_baerenklau_beat.py  test_burgtheater_import.py  test_cue_api.py  test_cue_model.py  test_cue_points.py  test_cue_scheduler.py  test_cue_service.py  test_device_adapters.py  test_device_api.py  test_device_model.py  test_device_service.py  test_director_api.py  test_director_emergency_layered.py  test_director_pipeline.py  test_dramaturg_labels.py  test_dramaturgy.py  test_dramaturgy_rules_text.py  test_dramaturgy_text.py  test_dramaturgy_workshop.py  test_eos_light.py  test_import_avatar_textzuordnung.py  test_inszenierung_analyse.py  test_inszenierung_bundle_service.py  test_inszenierung_import.py  test_inszenierung_komposition.py  test_inszenierung_validation.py  test_layered_cues.py  test_light_mirror_mode.py  test_light_replace.py  test_light_tcp.py  test_lighting.py  (+50 more)
data/: avatar_speech.json  (+7 more)
(+512 files in other folders)
