[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aidebatte-backend"
version = "0.1.0"
description = "FastAPI backend for AI Debate (GPT vs Claude)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "slowapi>=0.1.9",
  "structlog>=24.2.0",
  "email-validator>=2.2.0",
  "edge-tts>=6.1.0",
  "python-osc>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
